--- a/assets/css/sections/home.css
+++ b/assets/css/sections/home.css
@@ -4,6 +4,7 @@
   background-size: cover;
   background-position: 50%;
   padding-top: 5.5rem;
+  margin-bottom: 2.5rem;
   position: relative;
 }
 .home::before{
