--- a/assets/css/active-links.css
+++ b/assets/css/active-links.css
@@ -5,3 +5,12 @@
 .active-link::after{
   opacity: 1;
 }
+
+
+.active-work{
+  color: var(--primary-color);
+}
+
+.active-work::after{
+  opacity: 1;
+}
