--- a/assets/css/sections/projects.css
+++ b/assets/css/sections/projects.css
@@ -1,1 +1,54 @@
 /*=============== Projects ===============*/
+.project__categories{
+  display: flex;
+  column-gap: 3rem;
+  margin-bottom: 1.875rem;
+}
+.projects__container{
+  row-gap: 2.5rem;
+}
+.project__item{
+  grid-template-columns: 5fr 7fr;
+}
+
+.project__img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.project__data{
+  padding: 3rem 3rem 2.5rem 1.875rem;
+  border: 1px solid var(--border-color);
+}
+
+.project__title{
+  margin-bottom: .8em;
+  text-align: justify;
+}
+
+.project__description{
+  margin-bottom: 2.5em;
+  text-align: justify;
+}
+
+.project__stack {
+  margin-bottom: 1.25em;
+}
+
+
+.tags li{
+  display: inline-block;
+  margin-right: 0.6rem;
+  box-shadow: 0 1px 4px rgb(0 0 0 / 14%);
+  padding: .3rem .6rem;
+  border-radius: .2rem;
+}
+
+
+.project__link{
+  float: right;
+  margin-top: 3.9em;
+  color: var(--primary-color);
+  font-family: var(--mono-font);
+}
