Adicionando menu fixed quando scrollar a página

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -5,6 +5,7 @@
   left: 0;
   width: 100%;
   z-index: 100;
+  transition: .3s;
 }
 
 .nav{
@@ -51,4 +52,30 @@
 .nav__close,
 .nav__toggle{
   display: none;
+}
+
+
+
+/* Scroll Header */
+.scroll-header{
+  position: fixed;
+  background-color: var(--bg-color);
+  box-shadow: 0 5px 8px 0 rgb(0 0 0 /14%);
+}
+
+.scroll-header .nav__link {
+  color: var(--text-color);
+}
+
+.scroll-header .nav{
+  align-items: center;
+}
+
+.scroll-header .nav__link::after{
+  background-color: var(--text-color);
+}
+
+.scroll-header .nav__link:hover,
+.scroll-header .active-link{
+  color: var(--primary-color);
 }
