--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -79,3 +79,68 @@
 .scroll-header .active-link{
   color: var(--primary-color);
 }
+
+
+/*=============== BreakPoints ===============*/
+/* for large devices */
+@media screen and (max-width: 1200px) {
+}
+
+@media screen and (max-width: 992px) {
+  .nav__menu{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .8);
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateX(-100%);
+  }
+
+  .nav__list{
+    flex-direction: column;
+    row-gap: 2.125rem;
+    text-align: center;
+  }
+
+  .nav__toggle,
+  .nav__close{
+    display: block;
+  }
+
+  .nav__close{
+    font-size: 1.5rem;
+    position: absolute;
+    top: 2.7rem;
+    left: 8%;
+    cursor: pointer;
+    color: #fff;
+  }
+
+  .nav__toggle{
+    color: #fff;
+    font-size: 1.25rem;
+    opacity: .5;
+  }
+
+  .scroll-header .nav__toggle{
+    color: var(--text-color);
+    opacity: 1;
+  }
+
+}
+
+/* for medium devices */
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 576px) {
+}
+
+/* for small devices */
+@media screen and (max-width: 350px) {
+}
