Menu toggle mobile and tablet

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -99,6 +99,11 @@
     justify-content: center;
     align-items: center;
     transform: translateX(-100%);
+    transition: .3s;
+  }
+
+  .show-menu{
+    transform: translateX(0);
   }
 
   .nav__list{
