--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,6 +138,56 @@ input {
 
 
 /*=============== Style Switcher ===============*/
+.style__switcher {
+  position: fixed;
+  right: 0;
+  bottom: 20%;
+  padding: .625rem;
+  box-shadow: 5px 1px 10px rgba(0, 0, 0, .4);
+  background-color: var(--bg-color);
+  z-index: 101;
+  transform: translateX(100%);
+  transition: .3s;
+}
+
+.open{
+  transform: translateX(0);
+}
+
+.style__switcher-toggler{
+  position: absolute;
+  height: 52px;
+  width: 52px;
+  background-color: #2d2d2d;
+  right: 100%;
+  top: 0;
+  text-align: center;
+  line-height: 50px;
+  font-size: 1.75rem;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 2px;
+}
+
+.colors{
+  display: flex;
+  column-gap: .625rem;
+}
+
+.colors span{
+  display: inline-block;
+  height: 30px;
+  width: 30px;
+  border-radius: 2px;
+}
+
+.color-1{
+  background-color: #4a4a4a;
+}
+
+.color-2{
+  background-color: #6d56c1;
+}
 
 /*=============== BreakPoints ===============*/
 /* for large devices */
